# roomzin-bench

./: .gitignore  Cargo.toml  LICENSE-HEADER.txt  Makefile  Readme.md  bench.sh  build.sh
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: release.yml
config/: auth.yml  codecs.yml  discovery.yml  roomzin.yml
queries/: query.yml
rzgconf/: auth.yml  rzgate.yml
scripts/: benchmark_guide.txt  setup.sh
src/: Readme.md  codecs.rs  command.rs  config.rs  error.rs  generate.rs  main.rs  model.rs  parser.rs  persist.rs  query.rs  roomzin.rs  serializer.rs
src/rzgate/: bench.rs  client.rs  mod.rs  model.rs
