# // SPDX-License-Identifier: BUSL-1.1
# // Copyright (c) 2026 M. Javani
# //
# // This file is part of roomzin-bench.
# //
# // Use of this software is governed by the Business Source License 1.1
# // included in the LICENSE file in the root of this repository.

[package]
name = "rzbench"
version = "0.1.0"
edition = "2024"

[dependencies]
ahash = "0.8.12"
atomic-counter = "1.0.1"
bytes = "1.10.1"
chrono = "0.4.41"
clap = { version = "4.5.46", features = ["derive"] }
csv = "1.3.1"
futures = "0.3.31"
hdrhistogram = "7.5.4"
rand = "0.9.2"
reqwest = { version = "0.13.1", features = ["json", "http2"] }

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = "0.7.16"
toml = "0.9.6"
uuid = "1.18.1"

[profile.release]
opt-level     = "z"
lto           = true
codegen-units = 1
panic         = "abort"

